@@ -694,6 +694,26 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
+
+begin_import
+import|import
 name|com
 operator|.
 name|google
@@ -740,6 +760,21 @@ name|Syncable
 implements|,
 name|CanSetDropBehind
 block|{
+DECL|field|LOG
+specifier|static
+specifier|final
+name|Logger
+name|LOG
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|DFSOutputStream
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 comment|/**    * Number of times to retry creating a file when there are transient     * errors (typically related to encryption zones and KeyProvider operations).    */
 annotation|@
 name|VisibleForTesting
@@ -2483,55 +2518,18 @@ operator|==
 name|blockSize
 condition|)
 block|{
-if|if
-condition|(
-name|DFSClient
-operator|.
-name|LOG
-operator|.
-name|isDebugEnabled
+name|enqueueCurrentPacketFull
 argument_list|()
-condition|)
-block|{
-name|DFSClient
-operator|.
-name|LOG
-operator|.
-name|debug
-argument_list|(
-literal|"DFSClient writeChunk packet full seqno="
-operator|+
-name|currentPacket
-operator|.
-name|getSeqno
-argument_list|()
-operator|+
-literal|", src="
-operator|+
-name|src
-operator|+
-literal|", bytesCurBlock="
-operator|+
-name|getStreamer
-argument_list|()
-operator|.
-name|getBytesCurBlock
-argument_list|()
-operator|+
-literal|", blockSize="
-operator|+
-name|blockSize
-operator|+
-literal|", appendChunk="
-operator|+
-name|getStreamer
-argument_list|()
-operator|.
-name|getAppendChunk
-argument_list|()
-argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|enqueueCurrentPacket ()
+name|void
+name|enqueueCurrentPacket
+parameter_list|()
+throws|throws
+name|IOException
+block|{
 name|getStreamer
 argument_list|()
 operator|.
@@ -2544,6 +2542,47 @@ name|currentPacket
 operator|=
 literal|null
 expr_stmt|;
+block|}
+DECL|method|enqueueCurrentPacketFull ()
+name|void
+name|enqueueCurrentPacketFull
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"enqueue full {}, src={}, bytesCurBlock={}, blockSize={},"
+operator|+
+literal|" appendChunk={}, {}"
+argument_list|,
+name|currentPacket
+argument_list|,
+name|src
+argument_list|,
+name|getStreamer
+argument_list|()
+operator|.
+name|getBytesCurBlock
+argument_list|()
+argument_list|,
+name|blockSize
+argument_list|,
+name|getStreamer
+argument_list|()
+operator|.
+name|getAppendChunk
+argument_list|()
+argument_list|,
+name|getStreamer
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|enqueueCurrentPacket
+argument_list|()
+expr_stmt|;
 name|adjustChunkBoundary
 argument_list|()
 expr_stmt|;
@@ -2551,6 +2590,44 @@ name|endBlock
 argument_list|()
 expr_stmt|;
 block|}
+comment|/** create an empty packet to mark the end of the block. */
+DECL|method|setCurrentPacketToEmpty ()
+name|void
+name|setCurrentPacketToEmpty
+parameter_list|()
+throws|throws
+name|InterruptedIOException
+block|{
+name|currentPacket
+operator|=
+name|createPacket
+argument_list|(
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+name|getStreamer
+argument_list|()
+operator|.
+name|getBytesCurBlock
+argument_list|()
+argument_list|,
+name|getStreamer
+argument_list|()
+operator|.
+name|getAndIncCurrentSeqno
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|currentPacket
+operator|.
+name|setSyncBlock
+argument_list|(
+name|shouldSyncBlock
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * If the reopened file did not end at chunk boundary and the above    * write filled up its partial chunk. Tell the summer to generate full    * crc chunks from now on.    */
 DECL|method|adjustChunkBoundary ()
@@ -2658,47 +2735,11 @@ operator|==
 name|blockSize
 condition|)
 block|{
-name|currentPacket
-operator|=
-name|createPacket
-argument_list|(
-literal|0
-argument_list|,
-literal|0
-argument_list|,
-name|getStreamer
+name|setCurrentPacketToEmpty
 argument_list|()
-operator|.
-name|getBytesCurBlock
-argument_list|()
-argument_list|,
-name|getStreamer
-argument_list|()
-operator|.
-name|getAndIncCurrentSeqno
-argument_list|()
-argument_list|,
-literal|true
-argument_list|)
 expr_stmt|;
-name|currentPacket
-operator|.
-name|setSyncBlock
-argument_list|(
-name|shouldSyncBlock
-argument_list|)
-expr_stmt|;
-name|getStreamer
+name|enqueueCurrentPacket
 argument_list|()
-operator|.
-name|waitAndQueuePacket
-argument_list|(
-name|currentPacket
-argument_list|)
-expr_stmt|;
-name|currentPacket
-operator|=
-literal|null
 expr_stmt|;
 name|getStreamer
 argument_list|()
@@ -3126,17 +3167,8 @@ argument_list|(
 name|isSync
 argument_list|)
 expr_stmt|;
-name|getStreamer
+name|enqueueCurrentPacket
 argument_list|()
-operator|.
-name|waitAndQueuePacket
-argument_list|(
-name|currentPacket
-argument_list|)
-expr_stmt|;
-name|currentPacket
-operator|=
-literal|null
 expr_stmt|;
 block|}
 if|if
@@ -3186,17 +3218,8 @@ operator|||
 name|isSync
 argument_list|)
 expr_stmt|;
-name|getStreamer
+name|enqueueCurrentPacket
 argument_list|()
-operator|.
-name|waitAndQueuePacket
-argument_list|(
-name|currentPacket
-argument_list|)
-expr_stmt|;
-name|currentPacket
-operator|=
-literal|null
 expr_stmt|;
 name|getStreamer
 argument_list|()
@@ -3842,17 +3865,8 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|getStreamer
+name|enqueueCurrentPacket
 argument_list|()
-operator|.
-name|waitAndQueuePacket
-argument_list|(
-name|currentPacket
-argument_list|)
-expr_stmt|;
-name|currentPacket
-operator|=
-literal|null
 expr_stmt|;
 block|}
 if|if
@@ -3866,36 +3880,8 @@ operator|!=
 literal|0
 condition|)
 block|{
-comment|// send an empty packet to mark the end of the block
-name|currentPacket
-operator|=
-name|createPacket
-argument_list|(
-literal|0
-argument_list|,
-literal|0
-argument_list|,
-name|getStreamer
+name|setCurrentPacketToEmpty
 argument_list|()
-operator|.
-name|getBytesCurBlock
-argument_list|()
-argument_list|,
-name|getStreamer
-argument_list|()
-operator|.
-name|getAndIncCurrentSeqno
-argument_list|()
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|currentPacket
-operator|.
-name|setSyncBlock
-argument_list|(
-name|shouldSyncBlock
-argument_list|)
 expr_stmt|;
 block|}
 name|flushInternal
