@@ -319,22 +319,6 @@ operator|.
 name|client
 operator|.
 name|HdfsClientConfigKeys
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|client
-operator|.
-name|HdfsClientConfigKeys
 operator|.
 name|BlockWrite
 import|;
@@ -8751,6 +8735,39 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Override
+DECL|method|toString ()
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+operator|(
+name|block
+operator|==
+literal|null
+condition|?
+literal|null
+else|:
+name|block
+operator|.
+name|getLocalBlock
+argument_list|()
+operator|)
+operator|+
+literal|"@"
+operator|+
+name|Arrays
+operator|.
+name|toString
+argument_list|(
+name|getNodes
+argument_list|()
+argument_list|)
+return|;
 block|}
 block|}
 end_class
